--- a/IMC/index.html
+++ b/IMC/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Modelo</title>
+  <title>Calcule o IMC</title>
 </head>
 <body>
   <section class="container">
