--- a/IMC/index.html
+++ b/IMC/index.html
@@ -54,6 +54,11 @@
 
     </div>
   </section>
+  <footer>
+    <p>Author: Vinício Gomes</p>
+    <p><a href="mailto:viniciogomes@gmail.com">viniciogomes@gmail.com</a></p>
+    <p><a href="https://www.linkedin.com/in/vinicio-da-silva-gomes/"><img src="./assets/img/LinkedIn_icon.svg"></a></p>
+  </footer>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
