--- a/IMC/index.html
+++ b/IMC/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Calcule o IMC</title>
 </head>
