--- a/IMC/index.html
+++ b/IMC/index.html
@@ -44,9 +44,9 @@
       <input name="nome" type="text" class="inputNome" id="inputNome" placeholder="Informe seu Nome">
       <label id="sobrenome" for="inputSobrenome">Sobrenome:</label>
       <input name="sobrenome" type="text" class="inputSobrenome" id="inputSobrenome" placeholder="Informe o seu Sobrenome"></input>
-      <label id="peso" for="inputPeso">Peso:</label>
+      <label id="peso" for="inputPeso">Peso(em quilogramas):</label>
       <input name="peso" type="number" class="inputPeso" id="inputPeso" placeholder="Informe seu peso">
-      <label id="altura" for="inputAltura">Altura:</label>
+      <label id="altura" for="inputAltura">Altura(em centímetros):</label>
       <input name="altura" type="text" class="inputAltura" id="inputAltura" placeholder="Informe sua altura em centímetros">
       <input type="submit" value="Enviar" class="btn">
     </form>
