--- a/IMC/index.html
+++ b/IMC/index.html
@@ -47,7 +47,7 @@
       <label id="peso" for="inputPeso">Peso(em quilogramas):</label>
       <input name="peso" type="number" class="inputPeso" id="inputPeso" placeholder="Informe seu peso">
       <label id="altura" for="inputAltura">Altura(em centímetros):</label>
-      <input name="altura" type="text" class="inputAltura" id="inputAltura" placeholder="Informe sua altura em centímetros">
+      <input name="altura" type="text" class="inputAltura" id="inputAltura" placeholder="Informe sua altura">
       <input type="submit" value="Enviar" class="btn">
     </form>
 
