Relógio atualizando sem necessidade de recarregar a página inteira

--- a/relogio/index.html
+++ b/relogio/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
   <section class="container">
-    <h1>Bem-vindo, hoje é:</h1>
+    <h1>Bem-vindo(a), hoje é:</h1>
     <div class="calendario">
       
+    </div>
+    <div class="hora">
+
     </div>
   </section>
   <footer>
