--- a/relogio/index.html
+++ b/relogio/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Data & Hora</title>
+  <title>Que dia é hoje mesmo?</title>
 </head>
 <body>
   <section class="container">
