--- a/timer/index.html
+++ b/timer/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Modelo</title>
+  <title>Timer</title>
 </head>
 <body>
   <section class="container">
