--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -20,7 +20,7 @@
   </section>
   <footer>
     <p>Feito por: Vinício Gomes</p>
-    <p><a href="mailto:viniciogomes@gmail.com">viniciogomes@gmail.comm</a></p>
+    <p><a href="mailto:viniciogomes@gmail.com">viniciogomes@gmail.com</a></p>
     <p><a href="https://www.linkedin.com/in/vinicio-da-silva-gomes/"><img src="./assets/img/LinkedIn_icon.svg"></a></p>
   </footer>
   <script src="./assets/js/main.js"></script>
